# gdp-routing-capsule

./: Cargo.toml  cloud-init-script  conf.toml  conf2.toml  ec2.toml  init_tuntap.sh  nuc.toml  nuc_routes.toml  nucinstall.sh  routes.toml  test.toml  udp_gun.py
crates/client/: .gitignore  Cargo.toml  bindings.hpp  bindings.pyx  build.rs  gdp_client.h
crates/client/src/: c_ffi.rs  control.rs  core.rs  lib.rs  py_ffi.rs  structs.rs
crates/router/: Cargo.toml  conf.toml  init_sidecar.sh  init_tuntap.sh  nuc.toml  nuc_routes.toml  routes.toml
crates/router/src/: certificates.rs  conf.toml  devsetup.rs  dtls.rs  gdp.rs  gdp_pipeline.rs  hardcoded_routes.rs  inject.rs  kvs.rs  main.rs  packet_logging.rs  packet_ops.rs  pipeline.rs  prodsetup.rs  rib.rs  ribpayload.rs  runtime.rs  schedule.rs  sidecar.rs  statistics.rs  switch.rs  workloads.rs
crates/sidecar-lib/: Cargo.toml
crates/sidecar-lib/src/: lib.rs
python/: build.py  test.py
src/: certificates.rs  compose.rs  devsetup.rs  dtls.rs  gdp.rs  gdp_pipeline.rs  gdpbatch.rs  hardcoded_routes.rs  inject.rs  kvs.rs  main.rs  pipeline.rs  prodsetup.rs  rib.rs  ribpayload.rs  schedule.rs  statistics.rs  switch.rs  utils.rs  workloads.rs
