[package]
name = "ping4d"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Ping4 daemon example.
"""

[[bin]]
name = "gdp"
path = "src/main.rs"
doctest = false

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0"
capsule = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
strum = "0.21"
strum_macros = "0.21"
rand = "0.8.4"
signatory = { version = "0.23.1", features = ["ed25519"] }
hdrhistogram = "6.0"
chrono = "0.4"
signal-hook = "0.3.10"
clap = "2.33.3"
toml = "0.5.8"
serde = "1.0.130"
tokio = "=0.2.0-alpha.6"
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-net = { version = "=0.2.0-alpha.6", features = ["signal"] }
tokio-timer = "=0.3.0-alpha.6"
pin-project = "1.0.8"
metrics-core = "0.5"
metrics-observer-yaml = "0.1"
metrics-runtime = { version = "0.13", default-features = false }
